# ChangeLog for dev-perl/ExtUtils-XSBuilder
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-XSBuilder/ChangeLog,v 1.17 2006/07/10 15:28:27 agriffis Exp $

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  ExtUtils-XSBuilder-0.28.ebuild:
  Mark 0.28 stable on ia64

  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
  ExtUtils-XSBuilder-0.27.ebuild, ExtUtils-XSBuilder-0.28.ebuild:
  Fixed RDEPEND wrt bug #134781

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  ExtUtils-XSBuilder-0.28.ebuild:
  Marking amd64 stable

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  ExtUtils-XSBuilder-0.28.ebuild:
  Actual stable mark -sorry

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org> Manifest:
  digest update

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Marking stable sparc

*ExtUtils-XSBuilder-0.28 (26 Apr 2006)

  26 Apr 2006; <mcummings@gentoo.org> +ExtUtils-XSBuilder-0.28.ebuild:
  Version bump

  11 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  ExtUtils-XSBuilder-0.27.ebuild:
  Stable on ppc.

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  ExtUtils-XSBuilder-0.27.ebuild:
  Mark 0.27 stable on ia64

  15 Sep 2005; Aron Griffis <agriffis@gentoo.org>
  ExtUtils-XSBuilder-0.27.ebuild:
  Mark 0.27 stable on alpha

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  ExtUtils-XSBuilder-0.27.ebuild:
  add ~ia64

  15 Aug 2005; Michael Cummings <mcummings@gentoo.org>
  -ExtUtils-XSBuilder-0.25.ebuild, ExtUtils-XSBuilder-0.27.ebuild:
  Marking stable x86 and sparc

  14 Aug 2005; Fernando J. Pereda <ferdy@gentoo.org>
  ExtUtils-XSBuilder-0.27.ebuild:
  marked ~alpha, as a dependency of libapreq2 (bug #102503)

  25 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  ExtUtils-XSBuilder-0.25.ebuild:
  marking stable

*ExtUtils-XSBuilder-0.27 (25 Apr 2005)

  25 Apr 2005; Michael Cummings <mcummings@gentoo.org>