@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-XSBuilder/ExtUtils-XSBuilder-0.28.ebuild,v 1.5 2006/07/10 15:28:27 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-XSBuilder/ExtUtils-XSBuilder-0.28.ebuild,v 1.6 2006/08/05 03:35:00 mcummings Exp $
 
 inherit perl-module
 
@@ -13,5 +13,7 @@ SRC_TEST="do"
 LICENSE="|| ( Artistic GPL-2 )"
 KEYWORDS="~alpha amd64 ia64 ~ppc sparc ~x86"
 DEPEND="dev-perl/Parse-RecDescent
-		dev-perl/Tie-IxHash"
+	dev-perl/Tie-IxHash
+	dev-lang/perl"
 RDEPEND="${DEPEND}"
+
