@@ -1,1 +1,3 @@
 MD5 1d33ddeacc01426a02e23c71c2e4cd04 ExtUtils-XSBuilder-0.28.tar.gz 42758
+RMD160 73378a1ea415db21753e9d55d41b3d1d318586d8 ExtUtils-XSBuilder-0.28.tar.gz 42758
+SHA256 8cced386e3d544c5ec2deb3aed055b72ebcfc2ea9a6c807da87c4245272fe80a ExtUtils-XSBuilder-0.28.tar.gz 42758
